Bug 120333 - No way to load color palette
Summary: No way to load color palette
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL: https://help.libreoffice.org/6.2/en-U...
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: Color-Palettes Area-Fill-Tab-Color Help-Changes-Features
  Show dependency treegraph
 
Reported: 2018-10-05 07:09 UTC by Jens Reimann
Modified: 2022-06-30 09:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Reimann 2018-10-05 07:09:50 UTC
Description:
In older versions of LibreOffice (before 6) there was a way to load color palettes from a file. You can still find references to that e.g here: https://help.libreoffice.org/Impress/Loading_Color,_Gradient,_and_Hatching_Lists

However this functionality seems to be gone, and there is no way to load a pre-defined list of colors.

Steps to Reproduce:
1. Try to import color palette
2. BANG
3.

Actual Results:
No way to do it.

Expected Results:
Have a way to do it.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.2.1
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
CPU threads: 8; OS: Linux 3.10; UI render: default; VCL: gtk3; 
Flatpak
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 1 Timur 2018-10-05 16:13:45 UTC
Looks like an issue from Bug 90631. 
Did you use Slide-Properties-Background?
If you agree, we should change this one to Documentation because Format - Area is not available anymore.
Comment 2 Regina Henschel 2018-10-06 16:10:23 UTC
For color palettes it is not critical. You have no "load" inside the dialogs. But you only need to put the *.soc file into folder <installation-path>/share/palette to make it available for all users or into the user-folder user/config to make it available only for that user. The palette can then be chosen in the drop down list in the Color tab of the area or in the line dialog in the color field. Make sure, that the file name of the soc file is unique, otherwise you will have two entries with the same name in the list.

But the help needs to be adapted. I have changed the component.
Comment 3 Jens Reimann 2018-10-08 07:13:33 UTC
I don't think it is that easy.

a) How would a normal user do this, without access to the installation path?
b) How does that work when using Libreoffice as a flatpak?

Besides, having to manually copy files to the file system is a bad user experience.

So I would strongly suggest to really fix this issue, instead of relying on users to do command line "magic".
Comment 4 Regina Henschel 2018-10-08 07:48:04 UTC
@Jens: For the old "load" command, you need to know, where the color palettes are located in file system. Because the user folder is a hidden folder, that was difficult. Now you can switch the palette simple by selecting it from the drop-down list. Therefore I think, the new way is better. But the help needs to be adapted.
Comment 5 V Stuart Foote 2019-09-10 13:17:52 UTC
Custom color usdated in New Help in Documentation bug 107079, but nothing yet added describing support for user provided .SCO palettes--format, placement, selection.
Comment 6 lobaluna 2019-10-24 01:22:55 UTC
(In reply to Regina Henschel from comment #2)
> For color palettes it is not critical. You have no "load" inside the
> dialogs. But you only need to put the *.soc file into folder
> <installation-path>/share/palette to make it available for all users or into
> the user-folder user/config to make it available only for that user. The
> palette can then be chosen in the drop down list in the Color tab of the
> area or in the line dialog in the color field. Make sure, that the file name
> of the soc file is unique, otherwise you will have two entries with the same
> name in the list.
> 
> But the help needs to be adapted. I have changed the component.

@Regina, it might be not critical, but it is easier for regular users to load their customized SOC files directly in the same dialog where they switch palettes. The best option might be a global option to add custom palettes in Options menu.
Comment 7 Regina Henschel 2019-10-24 10:08:34 UTC
(In reply to lobaluna from comment #6)
> @Regina, it might be not critical, but it is easier for regular users to
> load their customized SOC files directly in the same dialog where they
> switch palettes. The best option might be a global option to add custom
> palettes in Options menu.

The dialog page where you switch palettes, has already many entries, and a regular user will not have own palette files. So that is not a good place for me. But I can imagine an item "import palettes" in Tools menu, that would give a dialog to copy palettes from external places into the correct internal place without knowing LibreOffice's internal path structure.

The problem is not "loading" a color palette, but to put it into the correct folder. Then they are loaded automatically.
Comment 8 V Stuart Foote 2019-10-24 11:58:11 UTC
(In reply to Regina Henschel from comment #7)

> The dialog page where you switch palettes, has already many entries, and a
> regular user will not have own palette files. So that is not a good place
> for me. But I can imagine an item "import palettes" in Tools menu, that
> would give a dialog to copy palettes from external places into the correct
> internal place without knowing LibreOffice's internal path structure.
> 
> The problem is not "loading" a color palette, but to put it into the correct
> folder. Then they are loaded automatically.

+1
Comment 9 Heiko Tietze 2021-09-02 08:16:10 UTC
Palettes are shared per extension. And for this we have the "tight integration" on several places that we can also provide in the color tab next to the palette dropdown.
Comment 10 Commit Notification 2021-09-03 10:00:00 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef3dd0e04e734974ff9a6b7f30d0377ecd952842

Resolves tdf#120333 - Access to color palettes via tight extensions

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.