Resolves tdf#120333 - Access to color palettes via tight extensions

Change-Id: I3311115854a29eaddf76b847642250626b7032ec